--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: yolo_backend:v1.0
     container_name: yolo_backend
     ports:
       - '5000:5000'
@@ -13,6 +14,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    image: yolo_client:v1.0
     container_name: yolo_client
     ports:
       - '3000:3000'
