--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: '3.3'
+networks:
+  yolo_network:
+    driver: bridge
+
 services:
   backend:
     build:
@@ -10,6 +14,9 @@ services:
       - '5000:5000'
     volumes:
       - ./backend:/app
+    networks:
+      - yolo_network
+    
   client:
     build:
       context: ./client
@@ -18,5 +25,7 @@ services:
     container_name: yolo_client
     ports:
       - '3000:3000'
+    networks:
+      - yolo_network
     stdin_open: true
 
