--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    image: yolo_backend:v1.0
+    image: kangangi/yolo_backend:v1.0
     container_name: yolo_backend
     ports:
       - '5000:5000'
@@ -21,7 +21,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    image: yolo_client:v1.0
+    image: kangangi/yolo_client:v1.0
     container_name: yolo_client
     ports:
       - '3000:3000'
