--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,8 @@
-FROM node:20-alpine
+FROM node:alpine
 
 WORKDIR /app
 
-COPY package.json ./
-
-COPY package-lock.json ./
+COPY package*.json ./
 
 RUN npm install
 
