--- a/roles/create_docker_volumes_and_networks/tasks/main.yml
+++ b/roles/create_docker_volumes_and_networks/tasks/main.yml
@@ -1,1 +1,11 @@
-- name: Create a Yolomy
+- name: Create a Yolomy data volume
+  docker_volume:
+    name: yolomy_volume
+    state: present
+
+
+- name: Create a Yolomy network
+  docker_network:
+    name: yolomy_network
+    state: present
+    attachable: true
