--- a/roles/install_docker/tasks/main.yml
+++ b/roles/install_docker/tasks/main.yml
@@ -36,7 +36,7 @@
     name: python3-pip
     state: present
 
-- name: install docker-py package
+- name: Install docker package
   pip: 
-    name: docker-py
+    name: docker==4.4.4
     state: present
