--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -21,3 +21,18 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 5000
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  type: LoadBalancer
+  name: backend-service
+spec:
+  selector:
+    app: backend
+  ports:
+  - port: 5000
+    targetPort: 5000
+    protocol: TCP
+
