--- a/database.yaml
+++ b/database.yaml
@@ -29,3 +29,17 @@ spec:
       resources:
         requests:
           storage: 1Gi
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb
+spec:
+  selector:
+    app: mongodb
+  ports:
+  - protocol: TCP
+    port: 27017
+    targetPort: 27017
