--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -22,4 +22,18 @@ spec:
         ports:
         - containerPort: 3000
 
-      
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: frontend
+  ports:
+  - protocol: TCP
+    port: 3000
+    targetPort: 3000
+
